<resources>
    <string name="app_name">Кот на часах</string>
    <string name="сat_on_clock">Кот на часах</string>
    <string name="welcome">ДОБРО ПОЖАЛОВАТЬ</string>
    <string name="new_user">Новый пользователь?</string>
    <string name="log_in">Войти</string>
    <string name="user_irina">Ирина</string>
    <string name="number_of_phone">Номер телефона</string>
    <string name="email">Почта</string>
    <string name="email_edit">Почта</string>
    <string name="phone_edit">Номер телефона</string>
    <string name="avatar">Avatar</string>
    <string name="back_row">Back_row</string>
    <string name="paw_big">Paw_big</string>
    <string name="circle">Circle</string>
    <string name="paw_small">Paw_small</string>
    <string name="noneText">noneText</string>
    <string name="button_my_event">Мои события</string>
    <string name="log_out">Выйти</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="find_event">Найти событие</string>
    <string name="search">Поиск</string>
    <string name="no_event">Событий нет</string>
    <string name="my_event">Мои события</string>
    <string name="emptiness_here">Здесь пусто</string>
    <string name="editing">Редактирование</string>
    <string name="name_editing">Название</string>
    <string name="name_description">Описание</string>
    <string name="Andrew_birthday_text">День рождение у Андрея</string>
    <string name="trampoline_text">Вечеринка у батута :)</string>
    <string name="date">Дата</string>
    <string name="pink_text">Розовый</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="edit_button_text">Редактировать</string>
    <string name="delete_button_text">Удалить</string>
    <string name="password">Пароль</string>
    <string name="no_account">Нет аккаунта? Зарегистрироваться</string>
    <string name="name">Имя</string>
    <string name="registr">Зарегестрироваться</string>
    <string name="have_account">Уже есть аккаунт? Войти</string>
    <string name="add_event">Добавить событие</string>
    <string name="new_event">Новое событие</string>
    <string name="date1">Пт, 12 янв.</string>
    <string name="time1">12:00</string>
    <string name="date2">Пт, 12 янв.</string>
    <string name="time2">12:00</string>
    <string name="foot_color">Цвет лакпи по умолчанию</string>
    <string name="add_notification">Добавить напоминание</string>
    <string name="on_development">В разработке</string>

</resources>