<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView2"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/orange_cat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/circle"
        app:layout_constraintEnd_toEndOf="@+id/gifImageView2"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/gifImageView2"
        app:layout_constraintTop_toTopOf="@+id/gifImageView2"
        app:srcCompat="@drawable/circle" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/amatic_sc_bold"
        android:letterSpacing="0.1"
        android:text="@string/сat_on_clock"
        android:textAlignment="center"
        android:textColor="@color/titleCatOnClock"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView2"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/textView4"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registr"
            android:textAlignment="center"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/name_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:ems="10"
            android:textColorHint="@color/black"
            android:hint="@string/name"
            android:minHeight="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:ems="10"
            android:textColorHint="@color/black"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/montserrat"
            android:autofillHints="password"
            android:ems="10"
            android:textColorHint="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:labelFor="@id/editTextTextPassword" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="48dp"
            android:onClick="textView6"
            android:text="@string/have_account"
            android:textAlignment="center"
            android:textColor="@color/gray_color"
            android:textSize="17sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="48dp"
        android:onClick="btn_login"
        android:src="@drawable/long_arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>