<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/screenBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="153dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="153dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/basic_user_profile" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/user_irina"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/pencil" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/number_of_phone"
            android:inputType="phone"
            app:layout_constraintBottom_toTopOf="@+id/bt_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/bt_button"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginBottom="360dp"
            android:background="@drawable/roundstyle"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:text="@string/button_my_event"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.939" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="96dp"
            android:contentDescription="@string/back_row"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_button"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/arrow_left" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_marginTop="168dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/roundstyle_grays_buttons"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:text="@string/log_out"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_button"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="170dp"
            android:layout_height="0dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="96dp"
            android:background="@drawable/roundstyle_grays_buttons"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:text="@string/delete_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>