<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewEventActivity"
    android:background="@color/screenBackground">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="375dp"
        android:layout_height="75dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/editTextText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/Andrew_birthday_text"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/small_pink_paw" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="347dp"
        android:layout_height="51dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/name_description"
        android:inputType="text"
        android:text="@string/trampoline_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="349dp"
        android:layout_height="139dp"
        android:layout_marginBottom="496dp"
        android:background="@drawable/roundstyle_grays_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="102dp"
            android:layout_height="28dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/date1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="102dp"
            android:layout_height="28dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/date2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.926"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="102dp"
            android:layout_height="28dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/time2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.926"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="102dp"
            android:layout_height="28dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/time1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_right" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="410dp"
        android:layout_height="140dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="102dp"
            android:layout_height="28dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:text="За 30 мин."
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="102dp"
            android:layout_height="28dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:text="За 2 дня"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/line" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="96dp"
        android:contentDescription="@string/back_row"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/arrow_left" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:background="@drawable/roundstyle"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:text="@string/edit_button_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.897" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/roundstyle_grays_buttons"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:text="@string/delete_button_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toEndOf="@+id/imageView4" />


</androidx.constraintlayout.widget.ConstraintLayout>