<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-11dp">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/amatic_sc_bold"
        android:letterSpacing="0.1"
        android:text="@string/сat_on_clock"
        android:textAlignment="center"
        android:textColor="@color/titleCatOnClock"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/orange_cat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/circle"
        app:layout_constraintEnd_toEndOf="@+id/gifImageView"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/gifImageView"
        app:layout_constraintTop_toTopOf="@+id/gifImageView"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="298dp"
        android:layout_height="302dp"
        android:background="@color/noneColor"
        android:contentDescription="@string/paw_big"
        android:onClick="imageButton"
        android:text="@string/сat_on_clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/big_cat_head" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="@font/montserrat"
        android:rotation="-25"
        android:text="@string/new_user"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.62"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:contentDescription="@string/paw_small"
        android:onClick="ImageView5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/small_cat_head" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:rotation="20"
        android:text="@string/log_in"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.623" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView" />

    <!--<Button
        android:id="@+id/button"
        android:layout_width="268dp"
        android:layout_height="241dp"
        android:backgroundTint="@color/noneColor"
        android:contentDescription="@string/noneText"
        android:text="@string/noneText"
        android:textColor="@color/noneColor"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton" />
    -->

</androidx.constraintlayout.widget.ConstraintLayout>