<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindEventActivity"
    android:background="@color/screenBackground">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/header_for_cat"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/cat_in_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/amatic_sc_bold"
            android:letterSpacing="0.1"
            android:text="@string/сat_on_clock"
            android:textAlignment="center"
            android:textColor="@color/titleCatOnClock"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="55dp"
            android:src="@drawable/burger" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/find_event"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/searchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.541" />

    <SearchView
        android:iconifiedByDefault="false"
        android:id="@+id/searchView"
        android:layout_width="337dp"
        android:layout_height="41dp"
        android:layout_marginBottom="628dp"
        android:background="@drawable/search_bar"
        android:queryHint="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:textColor="@color/gray_color"
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/no_event"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintVertical_bias="0.322" />


</androidx.constraintlayout.widget.ConstraintLayout>